k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: automation-hub
  labels:
    app.kubernetes.io/name: sd-automation-hub
